<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.dragon.yunpeng.metronic</groupId>
	<artifactId>SpringBootMetronic</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>SpringBootMetronic</name>
	<description>Demo project for standalone SpringBootMetronic</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
			<exclusions>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot-starter-logging</artifactId>
		        </exclusion>
    		</exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot-starter-logging</artifactId>
		        </exclusion>
    		</exclusions>
		</dependency>
		
		<!-- Log4J -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<!-- Aspect -->
		<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-aop</artifactId>
	    </dependency>
    
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-data-jpa</artifactId>
	    </dependency>
	    
	    <!-- HSQLDB Database -->
	    <dependency>
	        <groupId>org.hsqldb</groupId>
	        <artifactId>hsqldb</artifactId>
	        <scope>runtime</scope>
	    </dependency>
	    
	    <!-- H2 Database -->
	    <dependency>
	        <groupId>com.h2database</groupId>
	        <artifactId>h2</artifactId>
	    </dependency>
	    
	    <!-- Derby Database -->
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
	    <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        
    	<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.3</version>
		</dependency>

		<!-- Bootstrape-->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>4.6.1</version>
		</dependency>

		<!-- Font-awesome -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>font-awesome</artifactId>
			<version>5.15.4</version>
		</dependency>

		<!-- Jquery -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>3.5.1</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>popper.js</artifactId>
			<version>1.16.0</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator-core</artifactId>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
		<!--
		<dependency>
		    <groupId>jakarta.xml.bind</groupId>
		    <artifactId>jakarta.xml.bind-api</artifactId>
		    <version>4.0.1</version>
		</dependency>
		-->
    	
	</dependencies>

	<build>
		<finalName>SpringBootMetronic</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			<!--launch4j for building exe -->
			<plugin>
	            <groupId>com.akathist.maven.plugins.launch4j</groupId>
	            <artifactId>launch4j-maven-plugin</artifactId>
	            <version>2.5.0</version> <!-- Check for the latest version on Maven Central -->
	            <executions>
	                <execution>
	                    <id>l4j-cli</id>
	                    <phase>package</phase>
	                    <goals>
	                        <goal>launch4j</goal>
	                    </goals>
	                    <configuration>
						    <headerType>console</headerType>
						    <jar>${project.build.directory}/${project.build.finalName}.jar</jar>
						    <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
						    <downloadUrl>http://java.com/download</downloadUrl>
						    <jre>
						        <minVersion>1.8.0</minVersion>
						        <jdkPreference>preferJre</jdkPreference>
						    </jre>
						    <versionInfo>
						        <fileVersion>1.0.0.0</fileVersion>
						        <txtFileVersion>${project.version}</txtFileVersion>
						        <fileDescription>${project.name}</fileDescription>
						        <copyright>Your Copyright Information</copyright>
						        <productVersion>1.0.0.0</productVersion>
						        <txtProductVersion>1.0.0.0</txtProductVersion>
						        <productName>${project.name}</productName>
						        <internalName>${project.name}</internalName>
						        <originalFilename>${project.build.finalName}.exe</originalFilename>
						    </versionInfo>
						    <icon>${project.basedir}/src/main/resources/dragon.ico</icon> <!-- Path to your icon file -->
						</configuration>
	                </execution>
	            </executions>
	        </plugin>
	        
		</plugins>
	</build>

</project>
